--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "advent2021"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+debug = 1
+
 [[bin]]
 name = "day1"
 path = "src/day1.rs"
@@ -86,3 +89,7 @@ path = "src/day20.rs"
 [[bin]]
 name = "day21"
 path = "src/day21.rs"
+
+[[bin]]
+name = "day22"
+path = "src/day22.rs"
