--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [profile.release]
+lto = true
 debug = 1
 
 [[bin]]
@@ -93,3 +94,7 @@ path = "src/day21.rs"
 [[bin]]
 name = "day22"
 path = "src/day22.rs"
+
+[[bin]]
+name = "day23"
+path = "src/day23.rs"
